CSS: fix buttons alignment

--- a/sylva/base/static/css/base.css
+++ b/sylva/base/static/css/base.css
@@ -762,7 +762,8 @@ span.buttonLinkOption a {
     font-weight: bold;
 }
 
-span.buttonLinkLeft {
+span.buttonLinkLeft,
+span.buttonLinkRight {
     float: left;
 }
 
